--- a/index.html
+++ b/index.html
@@ -3,170 +3,161 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interseção de Retas | Prof. Fulano - Escola X - DXX</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Interseção de Retas - Site Insano</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      color: white;
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(135deg, #1a1a40, #2a2a72);
+      color: #ffffff;
       overflow-x: hidden;
     }
+
     header {
       text-align: center;
-      padding: 3rem 1rem;
-      background: linear-gradient(90deg, #ff416c, #ff4b2b);
-      clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-      box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+      padding: 60px 20px 30px;
+      animation: fadeIn 1.2s ease-in-out;
     }
+
     header h1 {
-      font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
-      animation: pulse 2s infinite;
+      background: linear-gradient(90deg, #00ffe7, #7f00ff);
+      -webkit-background-clip: text;
+      color: transparent;
+      text-shadow: 0 0 10px rgba(0, 255, 231, 0.5);
+      transition: transform 0.3s;
     }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
+
+    header h1:hover {
+      transform: scale(1.08);
     }
-    main {
-      padding: 4rem 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
+
     section {
-      margin-bottom: 4rem;
-      background: rgba(255,255,255,0.05);
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px rgba(255,255,255,0.1);
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(10px);
+      animation: slideUp 1.5s ease-in-out;
     }
+
     section h2 {
       font-size: 2rem;
+      margin-bottom: 20px;
       color: #00ffe7;
-      margin-bottom: 1rem;
+      transition: transform 0.3s;
     }
-    section p {
+
+    section h2:hover, section p:hover {
+      transform: scale(1.03);
+    }
+
+    p {
       font-size: 1.1rem;
-      line-height: 1.8;
-      color: #e0e0e0;
+      line-height: 1.7;
+      margin-bottom: 15px;
+      transition: transform 0.3s;
     }
-    canvas {
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
-    }
+
     footer {
       text-align: center;
-      padding: 2rem;
-      background: #1b1b2f;
+      padding: 20px;
       font-size: 0.9rem;
-      color: #aaa;
-      border-top: 1px solid #333;
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(60px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .orb {
+      position: absolute;
+      border-radius: 50%;
+      background: radial-gradient(circle, #00ffe7, transparent);
+      width: 200px;
+      height: 200px;
+      animation: float 6s ease-in-out infinite;
+      opacity: 0.2;
+      z-index: -1;
+    }
+
+    .orb1 { top: 10%; left: 10%; }
+    .orb2 { bottom: 10%; right: 15%; }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-30px); }
+      100% { transform: translateY(0); }
     }
   </style>
 </head>
 <body>
+  <div class="orb orb1"></div>
+  <div class="orb orb2"></div>
+
   <header>
-    <h1>🌌 Interseção de Duas Retas no Plano</h1>
+    <h1>🔷 Interseção de Duas Retas no Plano</h1>
   </header>
-  <main>
-    <section>
-      <h2>🔄 O que é a Interseção de Retas?</h2>
-      <p>
-        A interseção de duas retas é o ponto onde elas se cruzam no plano cartesiano. Se representarmos duas equações do 1º grau na forma <strong>y = mx + b</strong>, a solução do sistema é exatamente esse ponto de encontro.<br>
-        Esse ponto pode ser obtido algebricamente (resolvendo o sistema) ou graficamente (analisando onde as linhas se encontram no plano).
-      </p>
-    </section>
 
-    <section>
-      <h2>🔢 Representação Matemática</h2>
-      <p>
-        Suponha as equações:<br>
-        <code>y = 2x + 3</code> e <code>y = -x + 1</code><br>
-        Igualando as duas expressões:<br>
-        <code>2x + 3 = -x + 1</code> ➔ <code>3x = -2</code> ➔ <code>x = -2/3</code><br>
-        Substituindo em uma das equações:<br>
-        <code>y = 2(-2/3) + 3 = -4/3 + 9/3 = 5/3</code><br>
-        Logo, o ponto de interseção é <strong>(-2/3, 5/3)</strong>.
-      </p>
-    </section>
+  <section>
+    <h2>📌 O que é uma interseção?</h2>
+    <p>
+      A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.
+    </p>
+  </section>
 
-    <section>
-      <h2>🌍 Visualização Gráfica</h2>
-      <canvas id="grafico" width="600" height="400"></canvas>
-    </section>
-  </main>
+  <section>
+    <h2>📐 Como encontrar a interseção?</h2>
+    <p>
+      Para encontrar a interseção, basta resolver um sistema de equações formado pelas equações das duas retas. O resultado será o ponto comum entre elas.
+    </p>
+  </section>
+
+  <section>
+    <h2>🧠 Exemplo prático</h2>
+    <p>
+      Considere as retas:
+      <br />
+      R1: y = 2x + 3
+      <br />
+      R2: y = -x + 1
+      <br />
+      Igualando as duas expressões temos:
+      <br />
+      2x + 3 = -x + 1 → 3x = -2 → x = -2/3
+      <br />
+      Substituindo na equação de uma das retas:
+      <br />
+      y = 2(-2/3) + 3 = -4/3 + 3 = 5/3
+      <br />
+      Logo, o ponto de interseção é ( -2/3 , 5/3 ).
+    </p>
+  </section>
+
+  <section>
+    <h2>📊 Aplicações</h2>
+    <p>
+      A interseção de retas é usada em gráficos, programação, física e em praticamente todas as áreas que envolvem modelagem matemática.
+    </p>
+  </section>
 
   <footer>
-    Desenvolvido por Lucas ✨ | Prof. Fulano | Escola X | DXX 2025
+    Projeto desenvolvido para a faculdade — Nome do Professor, Escola/Instituição, Data.
   </footer>
-
-  <script>
-    const ctx = document.getElementById('grafico').getContext('2d');
-    const xValues = [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5];
-    const reta1 = xValues.map(x => 2 * x + 3);
-    const reta2 = xValues.map(x => -1 * x + 1);
-
-    new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: xValues,
-        datasets: [
-          {
-            label: 'y = 2x + 3',
-            data: reta1,
-            borderColor: '#00ffcc',
-            borderWidth: 3,
-            tension: 0.3
-          },
-          {
-            label: 'y = -x + 1',
-            data: reta2,
-            borderColor: '#ff4b2b',
-            borderWidth: 3,
-            tension: 0.3
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          legend: {
-            labels: {
-              color: 'black',
-              font: {
-                size: 16
-              }
-            }
-          }
-        },
-        scales: {
-          x: {
-            ticks: { color: 'black' },
-            title: {
-              display: true,
-              text: 'x',
-              color: 'black'
-            }
-          },
-          y: {
-            ticks: { color: 'black' },
-            title: {
-              display: true,
-              text: 'y',
-              color: 'black'
-            }
-          }
-        }
-      }
-    });
-  </script>
 </body>
 </html>
+
