--- a/index.html
+++ b/index.html
@@ -3,161 +3,161 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interseção de Retas - Site Insano</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <title>Interseção de Retas no Plano</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: 'Orbitron', sans-serif;
     }
 
     body {
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #1a1a40, #2a2a72);
-      color: #ffffff;
       overflow-x: hidden;
+      color: white;
+    }
+
+    .background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: radial-gradient(circle, #0f2027, #203a43, #2c5364);
+      perspective: 1000px;
+      z-index: -1;
+    }
+
+    .layer {
+      position: absolute;
+      width: 150vw;
+      height: 150vh;
+      top: -25vh;
+      left: -25vw;
+      background: url('https://www.transparenttextures.com/patterns/dark-mosaic.png');
+      opacity: 0.05;
+      transform-style: preserve-3d;
+      transition: transform 0.2s ease-out;
     }
 
     header {
       text-align: center;
-      padding: 60px 20px 30px;
-      animation: fadeIn 1.2s ease-in-out;
+      padding: 2rem;
+      font-size: 2.5rem;
+      color: #0ff;
+      text-shadow: 0 0 10px #0ff;
     }
 
-    header h1 {
-      font-size: 3rem;
-      background: linear-gradient(90deg, #00ffe7, #7f00ff);
-      -webkit-background-clip: text;
-      color: transparent;
-      text-shadow: 0 0 10px rgba(0, 255, 231, 0.5);
-      transition: transform 0.3s;
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
 
-    header h1:hover {
-      transform: scale(1.08);
+    h2:hover, p:hover {
+      transform: scale(1.05);
+      transition: all 0.3s ease;
+      color: #0ff;
     }
 
-    section {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 30px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 16px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
-      animation: slideUp 1.5s ease-in-out;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #00ffe7;
-      transition: transform 0.3s;
-    }
-
-    section h2:hover, section p:hover {
-      transform: scale(1.03);
+    h2 {
+      margin-top: 2rem;
+      font-size: 1.8rem;
+      color: #fff;
+      text-shadow: 0 0 5px #00f;
     }
 
     p {
-      font-size: 1.1rem;
+      margin-top: 1rem;
       line-height: 1.7;
-      margin-bottom: 15px;
-      transition: transform 0.3s;
+      color: #ddd;
     }
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      background-color: rgba(0, 0, 0, 0.3);
+    .quiz-section {
+      margin-top: 4rem;
+      background: rgba(0,0,0,0.3);
+      padding: 2rem;
+      border: 1px solid #0ff;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #0ff;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
+    .quiz-section h3 {
+      margin-bottom: 1rem;
+      color: #0ff;
+      text-shadow: 0 0 5px #0ff;
     }
 
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(60px); }
-      to { opacity: 1; transform: translateY(0); }
+    .question {
+      margin-bottom: 1.5rem;
     }
 
-    .orb {
-      position: absolute;
-      border-radius: 50%;
-      background: radial-gradient(circle, #00ffe7, transparent);
-      width: 200px;
-      height: 200px;
-      animation: float 6s ease-in-out infinite;
-      opacity: 0.2;
-      z-index: -1;
+    button {
+      padding: 0.5rem 1rem;
+      background: #0ff;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
     }
 
-    .orb1 { top: 10%; left: 10%; }
-    .orb2 { bottom: 10%; right: 15%; }
-
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-30px); }
-      100% { transform: translateY(0); }
+    .feedback {
+      margin-top: 1rem;
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
-  <div class="orb orb1"></div>
-  <div class="orb orb2"></div>
+  <div class="background">
+    <div class="layer" id="parallax"></div>
+  </div>
 
   <header>
-    <h1>🔷 Interseção de Duas Retas no Plano</h1>
+    Interseção de Duas Retas no Plano
   </header>
 
-  <section>
-    <h2>📌 O que é uma interseção?</h2>
+  <main>
+    <h2>O que é uma interseção?</h2>
     <p>
-      A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.
+      Quando duas retas se cruzam no plano, elas compartilham exatamente um ponto em comum. Esse ponto é chamado de ponto de interseção.
     </p>
-  </section>
 
-  <section>
-    <h2>📐 Como encontrar a interseção?</h2>
+    <h2>Como descobrir a interseção?</h2>
     <p>
-      Para encontrar a interseção, basta resolver um sistema de equações formado pelas equações das duas retas. O resultado será o ponto comum entre elas.
+      A maneira mais comum é igualar as equações das duas retas e resolver o sistema formado. Isso nos dá as coordenadas do ponto de interseção.
     </p>
-  </section>
 
-  <section>
-    <h2>🧠 Exemplo prático</h2>
-    <p>
-      Considere as retas:
-      <br />
-      R1: y = 2x + 3
-      <br />
-      R2: y = -x + 1
-      <br />
-      Igualando as duas expressões temos:
-      <br />
-      2x + 3 = -x + 1 → 3x = -2 → x = -2/3
-      <br />
-      Substituindo na equação de uma das retas:
-      <br />
-      y = 2(-2/3) + 3 = -4/3 + 3 = 5/3
-      <br />
-      Logo, o ponto de interseção é ( -2/3 , 5/3 ).
-    </p>
-  </section>
+    <div class="quiz-section">
+      <h3>💻 Quiz Hacker: Você sabe mesmo interseção?</h3>
+      <div class="question">
+        <p>Quais equações representam retas que se intersectam?</p>
+        <button onclick="responder(1)">y = 2x + 1 e y = 2x - 3</button><br/><br/>
+        <button onclick="responder(2)">y = x + 5 e y = -x + 5</button>
+        <div class="feedback" id="feedback"></div>
+      </div>
+    </div>
+  </main>
 
-  <section>
-    <h2>📊 Aplicações</h2>
-    <p>
-      A interseção de retas é usada em gráficos, programação, física e em praticamente todas as áreas que envolvem modelagem matemática.
-    </p>
-  </section>
+  <script>
+    // Fundo interativo com parallax
+    document.addEventListener("mousemove", (e) => {
+      const layer = document.getElementById("parallax");
+      const x = (e.clientX / window.innerWidth - 0.5) * 100;
+      const y = (e.clientY / window.innerHeight - 0.5) * 100;
+      layer.style.transform = `rotateX(${-y}deg) rotateY(${x}deg)`;
+    });
 
-  <footer>
-    Projeto desenvolvido para a faculdade — Nome do Professor, Escola/Instituição, Data.
-  </footer>
+    function responder(opcao) {
+      const feedback = document.getElementById("feedback");
+      if (opcao === 1) {
+        feedback.innerHTML = "❌ Ops! Essas retas são paralelas e nunca se encontram.";
+        feedback.style.color = "red";
+      } else {
+        feedback.innerHTML = "✅ Boa! Essas retas têm coeficientes angulares diferentes e se intersectam.";
+        feedback.style.color = "lime";
+      }
+    }
+  </script>
 </body>
 </html>
-
