--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   </section>
 
   <footer>
-    Projeto desenvolvido para a faculdade — Nome do Professor, Escola/Instituição, Data.
+    Projeto desenvolvido por Lucas — Professor Fabio, Colégio Helena Wysocki, 02/06/2025.
   </footer>
 </body>
 </html>
