--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <p>
       Considere as retas:
       <br />
-      R1: y = 2x + 3
+      <li>R1: y = 2x + 3</li>
       <br />
-      R2: y = -x + 1
+      <li>R2: y = -x + 1</li>
       <br />
       Igualando as duas expressões temos:
       <br />
@@ -156,7 +156,7 @@
   </section>
 
   <footer>
-    Projeto desenvolvido por Lucas — Professor Fabio, Colégio Helena Wysocki, 02/06/2025.
+    Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.
   </footer>
 </body>
 </html>
