--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interseção de Retas - Site Insano</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
@@ -12,11 +13,27 @@
       box-sizing: border-box;
     }
 
-    body {
+    body, html {
+      width: 100%;
+      height: 100%;
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #1a1a40, #2a2a72);
       color: #ffffff;
       overflow-x: hidden;
+    }
+
+    #background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -2;
+      width: 100%;
+      height: 100%;
+    }
+
+    main {
+      position: relative;
+      z-index: 1;
+      padding-bottom: 50px;
     }
 
     header {
@@ -42,7 +59,7 @@
       max-width: 900px;
       margin: 40px auto;
       padding: 30px;
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(0, 0, 0, 0.5);
       border-radius: 16px;
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
       backdrop-filter: blur(10px);
@@ -72,6 +89,7 @@
       padding: 20px;
       font-size: 0.9rem;
       background-color: rgba(0, 0, 0, 0.3);
+      margin-top: 50px;
     }
 
     @keyframes fadeIn {
@@ -83,80 +101,69 @@
       from { opacity: 0; transform: translateY(60px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    .orb {
-      position: absolute;
-      border-radius: 50%;
-      background: radial-gradient(circle, #00ffe7, transparent);
-      width: 200px;
-      height: 200px;
-      animation: float 6s ease-in-out infinite;
-      opacity: 0.2;
-      z-index: -1;
-    }
-
-    .orb1 { top: 10%; left: 10%; }
-    .orb2 { bottom: 10%; right: 15%; }
-
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-30px); }
-      100% { transform: translateY(0); }
-    }
   </style>
 </head>
 <body>
-  <div class="orb orb1"></div>
-  <div class="orb orb2"></div>
+  <div id="background"></div>
 
-  <header>
-    <h1>🔷 Interseção de Duas Retas no Plano</h1>
-  </header>
+  <main>
+    <header>
+      <h1>🔷 Interseção de Duas Retas no Plano</h1>
+    </header>
 
-  <section>
-    <h2>📌 O que é uma interseção?</h2>
-    <p>
-      A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.
-    </p>
-  </section>
+    <section>
+      <h2>📌 O que é uma interseção?</h2>
+      <p>A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.</p>
+    </section>
 
-  <section>
-    <h2>📐 Como encontrar a interseção?</h2>
-    <p>
-      Para encontrar a interseção, basta resolver um sistema de equações formado pelas equações das duas retas. O resultado será o ponto comum entre elas.
-    </p>
-  </section>
+    <section>
+      <h2>📐 Como encontrar a interseção?</h2>
+      <p>Para encontrar a interseção, basta resolver um sistema de equações formado pelas equações das duas retas. O resultado será o ponto comum entre elas.</p>
+    </section>
 
-  <section>
-    <h2>🧠 Exemplo prático</h2>
-    <p>
-      Considere as retas:
-      <br />
-      <li>R1: y = 2x + 3</li>
-      <br />
-      <li>R2: y = -x + 1</li>
-      <br />
-      Igualando as duas expressões temos:
-      <br />
-      2x + 3 = -x + 1 → 3x = -2 → x = -2/3
-      <br />
-      Substituindo na equação de uma das retas:
-      <br />
-      y = 2(-2/3) + 3 = -4/3 + 3 = 5/3
-      <br />
-      Logo, o ponto de interseção é ( -2/3 , 5/3 ).
-    </p>
-  </section>
+    <section>
+      <h2>🧠 Exemplo prático</h2>
+      <p>
+        Considere as retas:
+        <br /><li>R1: y = 2x + 3</li>
+        <br /><li>R2: y = -x + 1</li>
+        <br />Igualando as duas expressões temos:
+        <br />2x + 3 = -x + 1 → 3x = -2 → x = -2/3
+        <br />Substituindo na equação de uma das retas:
+        <br />y = 2(-2/3) + 3 = -4/3 + 3 = 5/3
+        <br />Logo, o ponto de interseção é ( -2/3 , 5/3 ).
+      </p>
+    </section>
 
-  <section>
-    <h2>📊 Aplicações</h2>
-    <p>
-      A interseção de retas é usada em gráficos, programação, física e em praticamente todas as áreas que envolvem modelagem matemática.
-    </p>
-  </section>
+    <section>
+      <h2>📊 Aplicações</h2>
+      <p>A interseção de retas é usada em gráficos, programação, física e em praticamente todas as áreas que envolvem modelagem matemática.</p>
+    </section>
 
-  <footer>
-    Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.
-  </footer>
+    <footer>
+      Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.
+    </footer>
+  </main>
+
+  <!-- Three.js + Vanta.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  <script>
+    VANTA.NET({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.0,
+      scaleMobile: 1.0,
+      color: 0x00ffe7,
+      backgroundColor: 0x1a1a40,
+      points: 12.0,
+      maxDistance: 22.0,
+      spacing: 18.0
+    });
+  </script>
 </body>
 </html>
