--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
         <br /><li>R1: y = 2x + 3</li>
         <br /><li>R2: y = -x + 1</li>
         <br />Igualando as duas expressões temos:
-        <br />2x + 3 = -x + 1 → 3x = -2 → x = -2/3
+        <br /><li>2x + 3 = -x + 1 → 3x = -2 → x = -2/3</li>
         <br />Substituindo na equação de uma das retas:
-        <br />y = 2(-2/3) + 3 = -4/3 + 3 = 5/3
-        <br />Logo, o ponto de interseção é ( -2/3 , 5/3 ).
+        <br /><li>= 2(-2/3) + 3 = -4/3 + 3 = 5/3</li>
+        <br />Logo, o ponto de interseção é <b>( -2/3 , 5/3 ).</b>
       </p>
     </section>
 
@@ -141,7 +141,7 @@
     </section>
 
     <footer>
-      Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.
+      <b>Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.</b>
     </footer>
   </main>
 
