--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Interseção de Retas - Site Insano</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <style>
     * {
@@ -92,6 +93,18 @@
       margin-top: 50px;
     }
 
+    #grafico {
+      height: 500px;
+      width: 100%;
+    }
+
+    #resultado {
+      margin-top: 20px;
+      font-size: 1.2rem;
+      text-align: center;
+      color: #00ffb7;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-30px); }
       to { opacity: 1; transform: translateY(0); }
@@ -112,6 +125,13 @@
     </header>
 
     <section>
+      <h2>🎯 Jogo: Adivinhe o ponto de interseção!</h2>
+      <p>Clique no gráfico abaixo onde você acha que as duas retas se encontram. Vamos ver se você acerta!</p>
+      <div id="grafico"></div>
+      <div id="resultado"></div>
+    </section>
+
+    <section>
       <h2>📌 O que é uma interseção?</h2>
       <p>A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.</p>
     </section>
@@ -124,14 +144,14 @@
     <section>
       <h2>🧠 Exemplo prático</h2>
       <p>
-        Considere as retas:
-        <br /><li>R1: y = 2x + 3</li>
-        <br /><li>R2: y = -x + 1</li>
-        <br />Igualando as duas expressões temos:
-        <br /><li>2x + 3 = -x + 1 → 3x = -2 → x = -2/3</li>
-        <br />Substituindo na equação de uma das retas:
-        <br /><li>= 2(-2/3) + 3 = -4/3 + 3 = 5/3</li>
-        <br />Logo, o ponto de interseção é <b>( -2/3 , 5/3 ).</b>
+        Considere as retas:<br>
+        <li>R1: y = 2x + 3</li><br>
+        <li>R2: y = -x + 1</li><br>
+        Igualando:<br>
+        <li>2x + 3 = -x + 1 → x = -2/3</li><br>
+        Substituindo:<br>
+        <li>y = 2(-2/3) + 3 = 5/3</li><br>
+        Logo, a interseção é <b>(-2/3, 5/3)</b>.
       </p>
     </section>
 
@@ -145,7 +165,6 @@
     </footer>
   </main>
 
-  <!-- Three.js + Vanta.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
   <script>
@@ -164,6 +183,22 @@
       maxDistance: 22.0,
       spacing: 18.0
     });
-  </script>
-</body>
-</html>
+
+    // Dados das retas
+    const x = Array.from({ length: 100 }, (_, i) => i / 5 - 10);
+    const reta1 = x.map(xi => 2 * xi + 3);
+    const reta2 = x.map(xi => -1 * xi + 1);
+
+    const trace1 = { x: x, y: reta1, type: 'scatter', name: 'R1: y = 2x + 3' };
+    const trace2 = { x: x, y: reta2, type: 'scatter', name: 'R2: y = -x + 1' };
+
+    Plotly.newPlot('grafico', [trace1, trace2], {
+      title: 'Clique onde acha que está o ponto de interseção!',
+      xaxis: { range: [-10, 10], title: 'x' },
+      yaxis: { range: [-10, 10], title: 'y' },
+      plot_bgcolor: "#1a1a40",
+      paper_bgcolor: "#1a1a40",
+      font: { color: "#ffffff" }
+    });
+
+    const intersecao = { x: -2 / 3, y: 5 / 3 };
