--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 
     <section>
       <h2>📐 Como encontrar a interseção?</h2>
-      <p>Para encontrar a interseção, basta resolver um sistema de equações formado pelas equações das duas retas. O resultado será o ponto comum entre elas.</p>
+      <p>Para encontrar a interseção de duas retas, basta resolver o sistema formado pelas equações das duas linhas. Quando elas se cruzam, existe um ponto que satisfaz as duas equações ao mesmo tempo.
+Esse ponto é encontrado ao igualar as expressões ou resolver o sistema e, assim, descobrir as coordenadas (x, y) da interseção.</p>
+<p>Se não houver solução, as retas são paralelas. Se houver infinitas soluções, são coincidentes.</p>
     </section>
 
     <section>
