--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
     <section>
       <h2>📐 Como encontrar a interseção?</h2>
-      <p>Para encontrar a interseção de duas retas, basta resolver o sistema formado pelas equações das duas linhas. Quando elas se cruzam, existe um ponto que satisfaz as duas equações ao mesmo tempo.
-Esse ponto é encontrado ao igualar as expressões ou resolver o sistema e, assim, descobrir as coordenadas (x, y) da interseção.</p>
+      <p>Para encontrar a interseção de duas retas, basta resolver o sistema formado pelas equações das duas linhas. Quando elas se cruzam, existe um ponto que satisfaz as duas equações ao mesmo tempo.</p>
+<p>Esse ponto é encontrado ao igualar as expressões ou resolver o sistema e, assim, descobrir as coordenadas (x, y) da interseção.</p>
 <p>Se não houver solução, as retas são paralelas. Se houver infinitas soluções, são coincidentes.</p>
     </section>
 
@@ -143,7 +143,7 @@ Esse ponto é encontrado ao igualar as expressões ou resolver o sistema e, assi
     </section>
 
     <footer>
-      Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.
+      <b>Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.</b>
     </footer>
   </main>
 
