--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
     </header>
 
     <section>
-      <h2>📌 O que é uma interseção?</h2>
-      <p>A interseção de duas retas é o ponto onde elas se cruzam em um plano. Esse ponto é único, desde que as retas não sejam paralelas.</p>
+      <h2>📌 O que é a Interseção de Duas Retas?</h2>
+      <p>A interseção de duas retas é o ponto onde elas se encontram no plano. Se duas linhas se cruzam, esse ponto em comum é chamado de interseção.</p>
+
+<p>Ela pode ou não existir: retas que se cruzam têm uma interseção; retas paralelas nunca se encontram; e retas coincidentes têm todos os pontos em comum.</p>
     </section>
 
     <section>
