--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </section>
 
     <footer>
-      <b>Projeto desenvolvido por Lucas — Professor Fabio Jardin - Colégio Helena Wysocki - 02/06/2025.</b>
+      <b>Projeto desenvolvido por Lucas — Professor Fabio Jardim - Colégio Helena Wysocki - 02/06/2025.</b>
     </footer>
   </main>
 
